--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 #container {
     height: 100vh;
@@ -24,13 +25,18 @@ html, body {
     position: relative;
 }
 #score {
-    font-family: 'Roboto', sans-serif;
     color: white;
     text-align: center;
 }
 #scoreMobile {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,0);
+    z-index: 1;
+    width: 100%;
     display: none;
     text-align: center;
+    font-size: 400%;
     color: white;
 }
 
